# ullm

./: Cargo.toml
crates/cli/src/: chat.rs  config.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  chat.rs  config.rs  lib.rs  message.rs  provider.rs  response.rs  stream.rs  template.rs  tool.rs
crates/core/tests/: response.rs
crates/ullm/: Cargo.toml
crates/ullm/src/: lib.rs
crates/ullm/src/cmd/: chat.rs  config.rs  mod.rs
docs/: book.toml
llm/deepseek/: Cargo.toml
llm/deepseek/src/: lib.rs  llm.rs  request.rs
