[package]
name = "ullm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
deepseek.workspace = true
ucore.workspace = true

# crates-io dependencies
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
